simple-2tier-app/05_frontend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend
  namespace: frontend
spec:
  rules:
  - host: frontend.app.corp.local
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 8080
